fix: align-items start in CSS - Makes autoprefixer happy :/ (#100)

--- a/src/components/Widget/OTPWidget.css
+++ b/src/components/Widget/OTPWidget.css
@@ -1,7 +1,7 @@
 .otp-widget .otp-widget-field-wrapper {
     display: flex;
     gap: 1rem;
-    align-items: start;
+    align-items: flex-start;
 }
 .otp-widget .otp-widget-field-wrapper .field {
     flex-grow: 1;
